@@ -57,146 +57,6 @@ directive|include
 file|"libgimp/libgimp-intl.h"
 end_include
 
-begin_ifdef
-ifdef|#
-directive|ifdef
-name|__GNUC__
-end_ifdef
-
-begin_warning
-warning|#
-directive|warning
-warning|FIXME: remove hacks here as soon as we depend on GTK 2.14
-end_warning
-
-begin_endif
-endif|#
-directive|endif
-end_endif
-
-begin_ifndef
-ifndef|#
-directive|ifndef
-name|__GTK_HSV_H__
-end_ifndef
-
-begin_define
-DECL|macro|GTK_TYPE_HSV
-define|#
-directive|define
-name|GTK_TYPE_HSV
-value|(gtk_hsv_get_type ())
-end_define
-
-begin_define
-DECL|macro|GTK_HSV (obj)
-define|#
-directive|define
-name|GTK_HSV
-parameter_list|(
-name|obj
-parameter_list|)
-value|(G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_HSV, GtkHSV))
-end_define
-
-begin_typedef
-DECL|typedef|GtkHSV
-typedef|typedef
-name|struct
-name|_GtkHSV
-name|GtkHSV
-typedef|;
-end_typedef
-
-begin_decl_stmt
-name|GType
-name|gtk_hsv_get_type
-argument_list|(
-name|void
-argument_list|)
-name|G_GNUC_CONST
-decl_stmt|;
-end_decl_stmt
-
-begin_function_decl
-name|GtkWidget
-modifier|*
-name|gtk_hsv_new
-parameter_list|(
-name|void
-parameter_list|)
-function_decl|;
-end_function_decl
-
-begin_function_decl
-name|void
-name|gtk_hsv_set_color
-parameter_list|(
-name|GtkHSV
-modifier|*
-name|hsv
-parameter_list|,
-name|double
-name|h
-parameter_list|,
-name|double
-name|s
-parameter_list|,
-name|double
-name|v
-parameter_list|)
-function_decl|;
-end_function_decl
-
-begin_function_decl
-name|void
-name|gtk_hsv_get_color
-parameter_list|(
-name|GtkHSV
-modifier|*
-name|hsv
-parameter_list|,
-name|gdouble
-modifier|*
-name|h
-parameter_list|,
-name|gdouble
-modifier|*
-name|s
-parameter_list|,
-name|gdouble
-modifier|*
-name|v
-parameter_list|)
-function_decl|;
-end_function_decl
-
-begin_function_decl
-name|void
-name|gtk_hsv_set_metrics
-parameter_list|(
-name|GtkHSV
-modifier|*
-name|hsv
-parameter_list|,
-name|gint
-name|size
-parameter_list|,
-name|gint
-name|ring_width
-parameter_list|)
-function_decl|;
-end_function_decl
-
-begin_endif
-endif|#
-directive|endif
-end_endif
-
-begin_comment
-comment|/* __GTK_HSV_H__ */
-end_comment
-
 begin_define
 DECL|macro|COLORSEL_TYPE_WHEEL
 define|#
@@ -594,70 +454,6 @@ argument_list|,
 name|wheel
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|gtk_check_version
-argument_list|(
-literal|2
-argument_list|,
-literal|13
-argument_list|,
-literal|7
-argument_list|)
-condition|)
-block|{
-comment|/*  for old versions of GtkHSV, we pack the thing into an alignment        *  and force the alignment to have a small requisition, because        *  it will be smart enough to deal with a larger allocation        */
-name|GtkWidget
-modifier|*
-name|alignment
-decl_stmt|;
-name|alignment
-operator|=
-name|gtk_alignment_new
-argument_list|(
-literal|0.5
-argument_list|,
-literal|0.5
-argument_list|,
-literal|0.0
-argument_list|,
-literal|0.0
-argument_list|)
-expr_stmt|;
-name|gtk_container_add
-argument_list|(
-name|GTK_CONTAINER
-argument_list|(
-name|frame
-argument_list|)
-argument_list|,
-name|alignment
-argument_list|)
-expr_stmt|;
-name|gtk_widget_show
-argument_list|(
-name|alignment
-argument_list|)
-expr_stmt|;
-name|g_signal_connect
-argument_list|(
-name|alignment
-argument_list|,
-literal|"size-request"
-argument_list|,
-name|G_CALLBACK
-argument_list|(
-name|colorsel_wheel_size_request
-argument_list|)
-argument_list|,
-name|wheel
-argument_list|)
-expr_stmt|;
-name|frame
-operator|=
-name|alignment
-expr_stmt|;
-block|}
 name|wheel
 operator|->
 name|hsv
@@ -684,20 +480,6 @@ operator|->
 name|hsv
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|gtk_check_version
-argument_list|(
-literal|2
-argument_list|,
-literal|13
-argument_list|,
-literal|7
-argument_list|)
-condition|)
-block|{
-comment|/*  for new versions of GtkHSV we don't need above alignment hack,        *  because it is smart enough by itself to cope with a larger        *  allocation than it requested        */
 name|g_signal_connect
 argument_list|(
 name|wheel
@@ -714,7 +496,6 @@ argument_list|,
 name|wheel
 argument_list|)
 expr_stmt|;
-block|}
 name|g_signal_connect
 argument_list|(
 name|wheel
